fix gradient not appearing on right side+ more visibility

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -69,6 +69,7 @@
 
 .logos {
   overflow: hidden;
+  width: 100%;
   padding: 60px 0;
   white-space: nowrap;
   position: relative;
